# dynamic_path_planning

./: .gitmodules  CMakeLists.txt  package.xml
config/: waffle_bridge.yaml
config/worlds/: move_actor.world
include/dynamic_path_planning/: mc_collision_kernel.cuh  pedestrian_gaussian.hpp  risk_aware_cost.cu  risk_aware_cost.cuh
launch/: dynamic_planning.launch.py  multi_actor_world.launch.py
models/turtlebot3_waffle/: minimal_model.sdf
scripts/: mc_collision_monitor.py  pedestrian_predictor.py  vel_publisher.py
src/: mc_collision_kernel.cu  mc_collision_monitor_node.cu  mppi_controller.cu  mppi_controller_node.cu
